added data class for images and val's for selected image/text, menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ImageActivity</string>
+
+    <string name="defaultDesc">Select an image for full display.</string>
 </resources>
