--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">ImageActivity</string>
-
+    <string name="app_title_label">Beautiful Photos App</string>
     <string name="defaultDesc">Select an image for full display.</string>
+    <string name="todo">TODO</string>
 </resources>
